  currently no function in the API to do this
  Got to File/Options/Instant messages and disable the checkboxes there


CODE
----
  Currently a real mess. At least I splitted it up a bit now.
  But hey, it kinda works... ;)

HISTORY
-------
0.0.0.22 - * Options page redesigned
           * Work around to force refresh of avatar in MyDetail (w8 the avatar change service)
           
0.0.0.21 - * Some minor bugfixes
		   * Severe bugfix: Message sending routine worked incorrectly (no errors were shown
		     even if there were sending-errors)
		   * Removed PingPong - thread in favour of WM_TIMER
		   * Fixed critical section unlocking in skypeapi.c. In certain cases, critical sections 
		     were not left correctly.
		   * Fixed a bug that caused Miranda to crash on exit with Newstatusnotify plugin
		     (thanks to TioDuke for reporting)
		   * Hopefully fixed the nasty bug that caused Miranda to lockup on exit.

0.0.0.20 - * Split service and options in two new cpp file.
           * Put the default attemps number to 10

0.0.0.19 - * Add avatar support for own user only (no api to ge contacts avatar)
           * Add set status message.
           * Add Get status message for contact where viewing contact details
           * Change icons (thanks to Faith Healer)
           * Updater support (BETA ONLY)
           * DBeEditor known module support
           * Mods to avoid warning in VC++ 8
           * Implement the MyDetail requested services
           
0.0.0.18 - * HOTFIX - Double File-Transfer icon removed. Please note that you can't send files
             via drag & drop, because of the nature of Skype API - Skype wants to open its own
			 "File/Open" dialog, so I cannot supply a path to the file to be sent, therefore I
			 had to add a seperate File-sending function rather than using Miranda's function.
             
0.0.0.17 - * Startup of Skype in a seperate thread was not solved properly. Now it should really
			 start in background